# agentspace-demo-agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agentspace_demo_agent/: __init__.py  agent.py
agentspace_demo_agent/agents/: adk_agent.py
agentspace_demo_agent/deployments/: deploy_adk_agent.py  deploy_to_agentspace.py
agentspace_demo_agent/invocations/: invoke_adk_agent_deployed.py  invoke_adk_agent_local.py  response_utils.py
